<resources>
    <string name="app_name" translatable="false">CodeEyeQ</string>
    <string name="server_url" translatable="false">https://codeeyeq.herokuapp.com/api/v1/</string>
    <string name="web_client_id" translatable="false">45557246868-8qh72u4bmkopv6b632kgb85rahcd40d3.apps.googleusercontent.com</string>
    <string name="app_version" translatable="false">1.0.0</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="on_boarding_title_1">Learn how to code</string>
    <string name="on_boarding_title_2">Debug and test</string>
    <string name="on_boarding_title_3">Peer to peer learning</string>
    <string name="on_boarding_description_1">Get the skills you need to create apps, websites and programs.</string>
    <string name="on_boarding_description_2">Answer all the quizzes given to you to master the art of coding.</string>
    <string name="on_boarding_description_3">Build your coding community while learning in peers.</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="example_password" translatable="false">********</string>
    <string name="john_doe" translatable="false">John Doe</string>
    <string name="example_email" translatable="false">example@codeeyeq.com</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_an_account_with_one_of_the_following_options">Create an account with one of the following options.</string>
    <string name="log_in_with_one_of_the_following_options">Log in with one of the following options.</string>
    <string name="full_name_error_message">Please enter your first and last name.</string>
    <string name="email_error_message">Please enter a valid email.</string>
    <string name="password_error_message">Please enter a valid password of at least 8 characters.</string>
    <string name="log_out">Log Out</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">An account already exists with the same email address but with a different log in method.</string>
    <string name="ERROR_WEAK_PASSWORD">Password is too weak and can easily be compromised.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">This email address is already in use by another account.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">These credentials are already associated with a different account.</string>
    <string name="ERROR_USER_DISABLED">This account has been disabled.</string>
    <string name="ERROR_USER_NOT_FOUND">This email address is not associated with any account.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">This account\'s credential is no longer valid. There need to be a new log in operation.</string>
    <string name="ERROR_INVALID_CREDENTIAL">Password is incorrect.</string>
    <string name="ERROR_WRONG_PASSWORD">Password is invalid or the account does not have a password because it was created using a third party service.</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">This operation is not allowed.</string>
    <string name="ERROR_UNKNOWN">An unknown error occurred.</string>
    <string name="SIGN_IN_CANCELLED">Operation failed because sign in was cancelled.</string>
    <string name="SIGN_IN_FAILED">Operation failed because sign in failed.</string>
    <string name="SIGN_IN_CURRENTLY_IN_PROGRESS">Operation failed because there is already a sign in happening.</string>
    <string name="server_error_message">Operation failed because a server error occurred.</string>
    <string name="password_link_sent">Password reset link sent.</string>
    <string name="no_internet">There is no internet connection.</string>
    <string name="go_back">Go back</string>
    <string name="sign_up_with_apple">Sign up with apple.</string>
    <string name="sign_up_with_google">Sign up with google.</string>
    <string name="sign_in_with_apple">Sign in with apple.</string>
    <string name="sign_in_with_google">Sign in with google.</string>
    <string name="password_visibility_show_and_hide_password">Password visibility, show and hide password.</string>
    <string name="home_icon_go_to_home_page">Home icon, go to home page.</string>
    <string name="learn_icon_go_to_learn_page">Learn icon, go to learn page.</string>
    <string name="collaborate_icon_go_to_collaborate_page">Collaborate icon, go to collaborate page.</string>
    <string name="more_icon_go_to_more_page">More icon, go to more page.</string>
    <string name="your_profile_picture">Your profile picture.</string>
    <string name="arrow_forward">Arrow forward</string>
    <string name="an_icon">An icon</string>
    <string name="my_posts">My Posts</string>
    <string name="saved">Saved</string>
    <string name="interests">Interests</string>
    <string name="membership">Membership</string>
    <string name="push_notification">Push Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about_codeeyeq">About CodeEyeQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="no_name">No Name</string>
    <string name="no_email">No Email</string>
    <string name="share_profile_button">Share profile button.</string>
    <string name="more">More</string>
</resources>