<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_black"
    tools:context=".activities.LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_image"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">

            <RelativeLayout
                android:id="@+id/back_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/white_black_solid_grey_stroke"
                android:gravity="center"
                android:padding="@dimen/padding">

                <ImageView
                    android:layout_width="@dimen/smaller_icons"
                    android:layout_height="@dimen/smaller_icons"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/back" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="?attr/black_white"
                android:textSize="@dimen/heading" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paragraph"
                    android:gravity="start|center"
                    android:text="@string/log_in_with_one_of_the_following_options"
                    android:textColor="?attr/grey"
                    android:textSize="@dimen/big" />

                <RelativeLayout
                    android:id="@+id/googleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/white_solid_grey_stroke"
                    android:gravity="center"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:id="@+id/google_logo"
                        android:layout_width="@dimen/icons"
                        android:layout_height="@dimen/icons"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/google_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/padding"
                        android:layout_toEndOf="@+id/google_logo"
                        android:gravity="center"
                        android:text="@string/google_signin"
                        android:textColor="?attr/black"
                        android:textSize="@dimen/big" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/emailHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paragraph"
                    android:text="@string/email"
                    android:textColor="?attr/grey"
                    android:textSize="@dimen/normal" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@drawable/snow_night_solid_grey_stroke"
                    android:drawableStart="@drawable/mail_outline_normal"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="start|center_vertical"
                    android:hint="@string/example_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding"
                    android:textColor="?attr/black_white"
                    android:textColorHint="?attr/grey" />

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="start|center_vertical"
                    android:textColor="?attr/errorRed"
                    android:textSize="@dimen/small"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/passwordHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:text="@string/password"
                    android:textColor="?attr/grey"
                    android:textSize="@dimen/normal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/snow_night_solid_grey_stroke"
                        android:drawableStart="@drawable/lock_normal"
                        android:drawablePadding="@dimen/padding"
                        android:gravity="start|center_vertical"
                        android:hint="@string/example_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/padding"
                        android:paddingTop="@dimen/padding"
                        android:paddingEnd="@dimen/large"
                        android:paddingBottom="@dimen/padding"
                        android:textColor="?attr/black_white"
                        android:textColorHint="?attr/grey" />

                    <ImageView
                        android:id="@+id/passwordVisibility"
                        android:layout_width="@dimen/smaller_icons"
                        android:layout_height="@dimen/smaller_icons"
                        android:layout_alignTop="@+id/password"
                        android:layout_alignEnd="@+id/password"
                        android:layout_alignBottom="@+id/password"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/padding"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/invisibility_normal" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/passwordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="start|center_vertical"
                    android:textColor="?attr/errorRed"
                    android:textSize="@dimen/small"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/padding"
                    android:gravity="end|center"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/blue_white"
                    android:textSize="@dimen/big" />

                <RelativeLayout
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paragraph"
                    android:layout_marginBottom="@dimen/padding"
                    android:background="@drawable/blue_white_solid"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/log_in"
                        android:textColor="?attr/white_black"
                        android:textSize="@dimen/big" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>