<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_black"
    tools:context=".controller.Home">

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/white_black"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="?attr/blue_white"
            android:textSize="@dimen/big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/learn_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/white_black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collaborate_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/white_black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/white_black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/blue_white_solid_big_radius"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/big">

        <FrameLayout
            android:id="@+id/home_icon_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="@dimen/icons"
                android:layout_height="@dimen/icons"
                android:layout_gravity="center"
                android:contentDescription="@string/home_icon_go_to_home_page"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/home_dot"
                android:layout_width="@dimen/padding"
                android:layout_height="@dimen/padding"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:background="@drawable/notification_dot"
                android:textSize="@dimen/large"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/learn_icon_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true">

            <ImageView
                android:id="@+id/learn_icon"
                android:layout_width="@dimen/icons"
                android:layout_height="@dimen/icons"
                android:layout_gravity="center"
                android:contentDescription="@string/learn_icon_go_to_learn_page"
                android:src="@drawable/learn_outline" />

            <TextView
                android:id="@+id/learn_dot"
                android:layout_width="@dimen/padding"
                android:layout_height="@dimen/padding"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:background="@drawable/notification_dot"
                android:textSize="@dimen/large"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/collaborate_icon_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true">

            <ImageView
                android:id="@+id/collaborate_icon"
                android:layout_width="@dimen/icons"
                android:layout_height="@dimen/icons"
                android:layout_gravity="center"
                android:contentDescription="@string/collaborate_icon_go_to_collaborate_page"
                android:src="@drawable/collaborate_outline" />

            <TextView
                android:id="@+id/collaborate_dot"
                android:layout_width="@dimen/padding"
                android:layout_height="@dimen/padding"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:background="@drawable/notification_dot"
                android:textSize="@dimen/large"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/more_icon_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true">

            <ImageView
                android:id="@+id/more_icon"
                android:layout_width="@dimen/icons"
                android:layout_height="@dimen/icons"
                android:layout_gravity="center"
                android:contentDescription="@string/more_icon_go_to_more_page"
                android:src="@drawable/more_outline" />

            <TextView
                android:id="@+id/more_dot"
                android:layout_width="@dimen/padding"
                android:layout_height="@dimen/padding"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:background="@drawable/notification_dot"
                android:textSize="@dimen/large"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>