<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_black"
    android:paddingTop="@dimen/padding"
    android:paddingBottom="@dimen/padding"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="?attr/black_white"
        android:textSize="@dimen/heading" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textSwitcher"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty"
            android:src="@drawable/illustration_3"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty"
            android:src="@drawable/illustration_2"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty"
            android:src="@drawable/illustration_1" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/textSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/getStarted"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="@dimen/paragraph"
        android:gravity="center"
        android:orientation="vertical">

        <TextSwitcher
            android:id="@+id/titleSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out" />

        <TextSwitcher
            android:id="@+id/descriptionSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:background="@drawable/blue_white_solid"
        android:gravity="center_vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="@dimen/icons"
            android:layout_height="@dimen/icons"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/account_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/get_started"
            android:textColor="?attr/white_black"
            android:textSize="@dimen/big" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:background="@drawable/tinted_blue_white_solid"
        android:gravity="center_vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="@dimen/icons"
            android:layout_height="@dimen/icons"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/mail_outline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="?attr/blue_white"
            android:textSize="@dimen/big" />
    </RelativeLayout>
</RelativeLayout>